Adding styling to forms and main page though out lab 5

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
-    font-family: "Inter", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
     background-color: #f5ffdb;
 }
 
@@ -13,4 +16,8 @@ body {
     height: auto;
     border-radius: 40%;
     border: 2px solid #ccc;
+}
+
+a {
+    text-decoration: none;
 }
