--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ p {
 #hobbies,
 #quotes {
   padding: 1rem;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
 }
 
 #logo {
@@ -230,7 +230,8 @@ a {
   gap: 1rem;
 }
 
-.form-actions button {
+.form-actions button,
+#reloadPosts {
   flex: 1 1 12rem;
   margin-top: 0.5rem;
   padding: 0.6rem;
@@ -242,7 +243,8 @@ a {
   cursor: pointer;
 }
 
-#addBtn:hover {
+#addBtn:hover,
+#reloadPosts:hover {
   background-color: rgb(156, 219, 39);
 }
 
@@ -251,37 +253,40 @@ a {
 }
 
 .form-actions button:active {
-     box-shadow: 0 5px #666;
-    transform: translateY(0.5rem);
+  box-shadow: 0 5px #666;
+  transform: translateY(0.5rem);
 }
 
 .form-actions button:hover {
-    box-shadow:0 0.75rem 1.25rem 0 rgba(0,0,0,0.6)
+  box-shadow: 0 0.75rem 1.25rem 0 rgba(0, 0, 0, 0.6)
 }
 
-/* Posts */
+/* Posts container */
 
-#postsContainer {
+.postsContainer {
   margin-block: 2rem;
+  border: 2px solid rgb(219, 105, 39);
+  border-radius: 1rem;
+  padding: 1rem;
 }
 
-#postsContainer header {
+.postsContainer header {
   padding: 1.25rem;
   background-color: #ffffff;
   border-radius: 1rem;
   margin-bottom: 3rem;
 }
 
-#postsContainer h3 {
+.postsContainer h3 {
   font-size: clamp(1.25rem, 2vw + 0.5rem, 1.75rem);
   margin-bottom: 0.5rem;
 }
 
-#postsContainer p {
+.postsContainer p {
   margin-bottom: 1rem;
 }
 
-#posts {
+.container {
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
@@ -309,3 +314,38 @@ a {
   color: #555;
 }
 
+.btn {
+  background-color: #f0c436;
+}
+
+#searchPostBtn,
+#searchPostByTitle,
+#restoreSearch {
+  font-size: clamp(0.95rem, 1vw + 0.4rem, 1.1rem);
+  ;
+  margin: 0.3rem;
+  padding: 0.5rem 1rem;
+  border: 1px solid rgb(216, 213, 21);
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+#searchPostByTitle:focus {
+  outline: none;
+  border-color: rgb(156, 219, 39);
+}
+
+#reloadPosts {
+  width: 100%;
+}
+
+#reloadPosts:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(0.5rem);
+}
+
+#search-control {
+  padding-top: 1rem;
+  display: flex;
+  align-items: center;
+}
