--- a/styles/techblog.css
+++ b/styles/techblog.css
@@ -8,7 +8,7 @@
 
 .tags span {
     background: #d6ece9;
-    color: #35ad1d;
+    color: #0648e1;
     padding: 0.2rem 0.5rem;
     border-radius: 6px;
     margin-right: 4px;
