--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,14 @@ h4 {
   font-size: clamp(0.95rem, 1vw + 0.4rem, 1.1rem);
 }
 
+a:visited {
+  color: black;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 p {
   font-size: 1em;
 }
